tests/baselines/reference/parser_continueTarget5.errors.txt
tests/cases/conformance/parser/ecmascript5/Statements/ContinueStatements/parser_continueTarget5.ts(1,1): error TS7028: Unused label.
tests/cases/conformance/parser/ecmascript5/Statements/ContinueStatements/parser_continueTarget5.ts(5,7): error TS1107: Jump target cannot cross function boundary.


==== tests/cases/conformance/parser/ecmascript5/Statements/ContinueStatements/parser_continueTarget5.ts (2 errors) ====
    target:
    ~~~~~~
!!! error TS7028: Unused label.
    while (true) {
      function f() {
        while (true) {
          continue target;
          ~~~~~~~~~~~~~~~~
!!! error TS1107: Jump target cannot cross function boundary.
        }
      }
    }